* Previous state to react * Will start componenting

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,18 @@
-$body-color: slateblue;
+:global {
+  @import "./grid";
 
-body {
-  color: $body-color;
-  font-family: sans-serif;
+  $body-color: slateblue;
+
+  body {
+    color: $body-color;
+    font-family: sans-serif;
+  }
+
+  .text-left {
+    text-align: left;
+  }
+
+  .text-right {
+    text-align: right;
+  }
 }
