--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -11,29 +11,37 @@
 }
 
 .col-1 {
-  flex-basis: 100%;
+  width: 100%;
 }
 
 .col-2 {
-  flex-basis: 50%;
+  width: 50%;
 }
 
 .col-3 {
-  flex-basis: 33.3333333%;
+  width: 33.3333333%;
 }
 
 .col-1-4, .col-4 {
-  flex-basis: 25%;
+  width: 25%;
 }
 
 .col-3-4 {
-  flex-basis: 75%;
+  width: 75%;
 }
 
 .col-4-5 {
-  flex-basis: 80%;
+  width: 80%;
 }
 
 .col-1-5 {
-  flex-basis: 20%;
+  width: 20%;
+}
+
+.col-2-5 {
+  width: 40%;
+}
+
+.col-3-5 {
+  width: 60%;
 }
